# Third-level Makefile.am for UniversalCodeGrep, ./src/libext directory.
#
# Copyright 2016 Gary R. Van Sickle (grvs@users.sourceforge.net).
#
# This file is part of UniversalCodeGrep.
#
# UniversalCodeGrep is free software: you can redistribute it and/or modify it under the
# terms of version 3 of the GNU General Public License as published by the Free
# Software Foundation.
#
# UniversalCodeGrep is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
# PARTICULAR PURPOSE.  See the GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License along with
# UniversalCodeGrep.  If not, see <http://www.gnu.org/licenses/>.

noinst_LIBRARIES = libext.a 
libext_a_SOURCES = \
	cpuidex.hpp cpuidex.cpp \
	filesystem.hpp \
	integer.hpp \
	multivesioning.hpp multiversioning.cpp \
	string.hpp \
	dummy.cpp

libext_a_CPPFLAGS = $(AM_CPPFLAGS)
libext_a_CFLAGS = $(AM_CFLAGS)
libext_a_CXXFLAGS = $(AM_CXXFLAGS)
